14 April 2008: Wouter
	- got update for parseunbound.pl statistics script from Kai Storbeck.
	- tpkg tests for udp wait list.
	- documented 0x20 status.
	- fixup chroot and checkconf, it is much smarter now.

11 April 2008: Wouter
	- random port selection out of the configged ports.
	- fixup threadsafety for libevent-1.4.3+ (event_base_get_method).
	- removed base_port.
	- created 256-port ephemeral space for the OS, 59802 available.
	- fixup consistency of port_if out array during heavy use.

10 April 2008: Wouter
	- --with-libevent works with latest libevent 1.4.99-trunk.
	- added log file statistics perl script to contrib.
	- automatic iana ports update from makefile. 60058 available.

9 April 2008: Wouter
	- configure can detect libev(from its build directory) when passed
	  --with-libevent=/home/wouter/libev-3.2
	  libev-3.2 is a little faster than libevent-1.4.3-stable (about 5%).
	- unused commpoints not listed in epoll list.
	- statistics-cumulative option so that the values are not reset.
	- config creates array of available ports, 61841 available,
	  it excludes <1024 and iana assigned numbers.
	  config statements to modify the available port numbers.

8 April 2008: Wouter
	- unbound tries to set the ulimit fds when started as server.
	  if that does not work, it will scale back its requirements.

27 March 2008: Wouter
	- documented /dev/random symlink from chrootdir as FAQ entry.

26 March 2008: Wouter
	- implemented AD bit signaling. If a query sets AD bit (but not DO)
	  then the AD bit is set in the reply if the answer validated.
	  Without including DNSSEC signatures. Useful if you have a trusted
	  path from the client to the resolver. Follows dnssec-updates draft.

25 March 2008: Wouter
	- implemented check that for NXDOMAIN and NOERROR answers a query
	  section must be present in the reply (by the scrubber). And it must
	  be equal to the question sent, at least lowercase folded.
	  Previously this feature happened because the cache code refused