@@ -3,6 +3,7 @@
 	- tpkg tests for udp wait list.
 	- documented 0x20 status.
 	- fixup chroot and checkconf, it is much smarter now.
+	- fixup DSA EVP signature decoding. Solution that Jelte found copied.
 
 11 April 2008: Wouter
 	- random port selection out of the configged ports.
